src/objects/Case.object
<!--
  ~ Copyright (c) 2017, Salesforce.com, Inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomObject>
    <fields>
        <fullName>DeskActiveDate__c</fullName>
        <label>Desk Active Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeskAssignedGroup__c</fullName>
        <description>Desk.com allows a case to be associated to both a user and a group (Queue). Salesforce allows a case to be assigned to either a user or a queue, but not both at the same time. This field holds the group assigned to this case from Desk.com.</description>
        <label>Desk Assigned Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeskChangedDate__c</fullName>
        <label>Desk Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeskCreatedAt__c</fullName>
        <description>This field is used to hold the &apos;created at&apos; timestamp from Desk.com to maintain audit history.</description>
        <label>Desk Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeskExternalId__c</fullName>
        <label>Desk External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeskFirstOpenedDate__c</fullName>
        <label>Desk First Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeskFirstResolvedDate__c</fullName>
        <label>Desk First Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeskId__c</fullName>
        <description>This custom field contains the Id of this record from Desk.com for historical purposes. This field should be read-only and phased out over time and removed.</description>
        <externalId>true</externalId>
        <label>Desk Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DeskLabels__c</fullName>
        <label>Desk Labels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeskOpenedDate__c</fullName>
        <label>Desk Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeskReceivedDate__c</fullName>
        <label>Desk Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeskResolvedAt__c</fullName>
        <label>Desk Resolved At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeskThreadId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field will hold the unique hash included in outgoing emails from Desk.com. When a customer responds to an email, this hash is used to find the existing case and associate the email message with it rather than creating a new case. This field should be read-only and phased out over time and removed.</description>
        <externalId>true</externalId>
        <label>Desk Thread Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DeskUpdatedAt__c</fullName>
        <description>This field is used to hold the &apos;updated at&apos; timestamp from Desk.com to maintain audit history.</description>
        <label>Desk Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <active>true</active>
        <label>SCMT</label>
        <fullName>SCMT</fullName>
    </recordTypes>
</CustomObject>